log
Fri 29 Mar 2024 01:03:08 PM UTC: 
 tests:  0|6
total_score: 0/70
032a1b5
Fri 29 Mar 2024 01:32:34 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e78c3a1
Fri 29 Mar 2024 01:33:47 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4dfee98
Fri 29 Mar 2024 01:34:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   43 |     return *list->head;
      |            ^~~~~~~~~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f816e1d
Fri 29 Mar 2024 01:34:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5b9afdf
Fri 29 Mar 2024 02:21:22 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
1ebeccf
Fri 29 Mar 2024 02:25:24 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6fe33db
